--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-data-table-component": "^7.0.0",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.10.0",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
