--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
+    "react-parallax": "^3.3.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
