--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
-
     "react-icons": "^4.2.0",
-
     "react-parallax": "^3.3.0",
-
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
