--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "react-data-table-component": "^7.0.0",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
+    "react-hamburger-button": "0.0.1",
     "react-icons": "^4.2.0",
     "react-parallax": "^3.3.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1",
     "reactstrap": "^8.10.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
