--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
+    "react-burger-menu": "^3.0.6",
     "react-data-table-component": "^7.0.0",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
