--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-icons": "^4.2.0",
     "react-parallax": "^3.3.0",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-slick": "^0.28.1",
     "react-timer-hook": "^3.0.5",
     "reactstrap": "^8.10.0",
