--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
     "react-icons": "^4.2.0",
+    "react-loader-spinner": "^4.0.0",
     "react-parallax": "^3.3.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "^4.0.3",
